<resources>
    <string name="app_name">CriminalIntent_Dionio</string>
    <string name="crime_title_label">TITLE</string>
    <string name="crime_title_hint">Enter a title for the crime</string>
    <string name="crime_solved_label">Solved</string>
    <string name="save">SAVE</string>
    <string name="report_crime">REPORT</string>
    <string name="send_report">Send crime report</string>
    <string name="crime_report_subject">Crime Report</string>
    <string name="crime_report">Crime: %1$s\nDate: %2$s\nStatus: %3$s</string>
    <string name="crime_report_solved">The crime has been solved.</string>
    <string name="crime_report_unsolved">The crime has not been solved.</string>
    <string name="untitled_crime">Untitled crime</string>
    <string name="choose_suspect">Choose suspect</string>
    <string name="call_suspect_default">Call suspect</string>
    <string name="call_suspect">Call %1$s</string>
    <string name="suspect_has_no_phone">This contact does not have a phone number.</string>
    <string name="read_contacts_permission_denied">Contacts permission is required to choose a suspect.</string>
    <string name="no_contacts_app">No contacts app is available.</string>
    <string name="no_dialer_app">No dialer app is available.</string>
    <string name="contact_police">CONTACT POLICE</string>
    <string name="contact_police_toast">CONTACT POLICE</string>
    <string name="jump_first">FIRST</string>
    <string name="jump_last">LAST</string>
    <string name="add_crime">NEW CRIME</string>
    <string name="ok">OK</string>
    <string name="select_time">Select Time</string>
    <string name="delete_crime">Delete Crime</string>
    <string name="delete">Delete</string>
    <string name="delete_crime_confirmation">Are you sure you want to delete this crime?</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="empty_crime_list">There are no crimes.</string>
    <string name="empty_crime_button">Create a crime</string>
    <string name="crime_detail_placeholder">Welcome to CriminalIntent\nSelect a crime to proceed.</string>
    <string name="take_photo">Take photo</string>
    <string name="crime_photo">Crime scene photo</string>
    <string name="zoomed_crime_photo">Zoomed crime scene photo</string>
    <string name="change_date_or_time">Change Date or Time</string>
    <string name="change_date">Change Date</string>
    <string name="change_time">Change Time</string>
    <string name="case_closed">Case Closed</string>
    <string name="case_open">Case Open</string>
    <string name="new_crime_title">Crime #%1$d</string>
    <string name="change_language">Change Language</string>
    <string name="choose_language">Choose Language</string>
    <string name="language_english">English</string>
    <string name="language_spanish">Spanish</string>
    <string name="localized_date_time">%1$s, %2$s</string>
    <plurals name="subtitle_plural">
        <item quantity="one">%1$d crime</item>
        <item quantity="other">%1$d crimes</item>
    </plurals>
</resources>
